# Codelet

./: CMakeLists.txt
include/: CMakeLists.txt
include/cdlt/: CMakeLists.txt  CdltOps.h  cdltDialect.h  cdltDialect.td  cdltOps.td  cdltPasses.td
src/IR/: CdltOps.cpp
